redis-sentinel/6-redis-master-statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  labels:
    app: redis-sentinel-master-ss
  name: redis-sentinel-master-ss
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-sentinel-master-ss
  serviceName: redis-sentinel-master-ss
  template:
    metadata:
      labels:
        app: redis-sentinel-master-ss
    spec:
      containers:
        - args:
            - -c
            - cp /mnt/redis-master.conf /data/ ; redis-server /data/redis-master.conf
          command:
            - sh
          image: redis:7.0.5
          imagePullPolicy: IfNotPresent
          name: redis-master
          ports:
            - containerPort: 6379
              name: masterport
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt/
              name: config-volume
              readOnly: false
            - mountPath: /data/
              name: redis-sentinel-master-storage
              readOnly: false
      serviceAccountName: redis-sentinel
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            items:
              - key: redis-master.conf
                path: redis-master.conf
            name: redis-sentinel-config
          name: config-volume
  volumeClaimTemplates:
    - metadata:
        name: redis-sentinel-master-storage
      spec:
        accessModes:
          - ReadWriteMany
        storageClassName: "redis-sentinel-storage-class"
        resources:
          requests:
            storage: 200M
