redis-sentinel/7-redis-slave-statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  labels:
    app: redis-sentinel-slave-ss
  name: redis-sentinel-slave-ss
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis-sentinel-slave-ss
  serviceName: redis-sentinel-slave-ss
  template:
    metadata:
      labels:
        app: redis-sentinel-slave-ss
    spec:
      containers:
        - args:
            - -c
            - cp /mnt/redis-slave.conf /data/ ; redis-server /data/redis-slave.conf
          command:
            - sh
          image: redis
          imagePullPolicy: IfNotPresent
          name: redis-slave
          ports:
            - containerPort: 6379
              name: slaveport
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt/
              name: config-volume
              readOnly: false
            - mountPath: /data/
              name: redis-sentinel-slave-storage
              readOnly: false
      serviceAccountName: redis-sentinel
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            items:
              - key: redis-slave.conf
                path: redis-slave.conf
            name: redis-sentinel-config
          name: config-volume
  volumeClaimTemplates:
    - metadata:
        name: redis-sentinel-slave-storage
      spec:
        accessModes:
          - ReadWriteMany
        storageClassName: "redis-sentinel-storage-class"
        resources:
          requests:
            storage: 200M
