redis-sentinel/11-redis-tcpingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-route
  namespace: default

spec:
  entryPoints:
    - redis

  routes:
    - match: HostSNI(`*`)
      services:
        - name: redis-sentinel-master-ss
          port: 6379
