redis-sentinel/redis-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: redis-route
  namespace: default

spec:
  entryPoints:
  - redis

  routes:
  - match: HostSNI(`*`)
    services:
      - name: redis-service
        protocol: "TCP"
        port: 26379
