redis-sentinel/redis-sentinel-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sentinel-route
  namespace: default

spec:
  entryPoints:
  - sentinel

  routes:
  - match: HostSNI(`*`)
    services:
      - name: redis-sentinel-sentinel-ss
        protocol: "TCP"
        port: 26379
